# Monty

./: .gitignore  CONTRIBUTING.txt  Cargo.toml  Copying.txt  LICENSE  LICENSE.txt  Makefile  README.md  build.rs  see.epd
.github/workflows/: build.yaml  check.yaml  checks.yaml  clippy.yaml  fmt.yaml
crates/datagen/: Cargo.toml
crates/datagen/src/: book.rs  main.rs  thread.rs
crates/montyformat/: Cargo.toml
crates/montyformat/src/: chess.rs  format.rs  interleave.rs  lib.rs  value.rs
crates/montyformat/src/chess/: attacks.rs  consts.rs  frc.rs  moves.rs  position.rs
crates/train-policy/: Cargo.toml
crates/train-policy/src/: data.rs  main.rs  model.rs
crates/train-policy/src/data/: loader.rs  reader.rs
crates/train-policy/src/model/: loss.rs  select_affine.rs
crates/train-policy/src/model/loss/: softmax.cu
crates/train-policy/src/model/select_affine/: bwd.cu  fwd.cu
crates/train-value/: Cargo.toml
crates/train-value/src/: dataloader.rs  input.rs  main.rs
datagen/: Cargo.toml
datagen/src/: dataformat.rs  impls.rs  lib.rs  main.rs  rng.rs  thread.rs
datagen/src/dataformat/: binpack.rs  board.rs  policy.rs
datagen/src/impls/: ataxx.rs  chess.rs  shatranj.rs
monty-core/: Cargo.toml
monty-core/src/: consts.rs  frc.rs  lib.rs  moves.rs  policy.rs  position.rs  value.rs
monty-engine/: Cargo.toml
monty-engine/src/: lib.rs  main.rs  mcts.rs  params.rs  policy.rs  qsearch.rs  uci.rs
monty-policy/: Cargo.toml
monty-policy/src/: activation.rs  layer.rs  lib.rs  matrix.rs  subnet.rs  vector.rs
monty-train/: Cargo.toml
monty-train/src/: data.rs  datagen.rs  gradient.rs  lib.rs  rng.rs
resources/: ataxx-fens.txt  bench.txt  chess-fens.txt
src/: ataxx.rs  attacks.rs  chess.rs  comm.rs  consts.rs  correction_history.rs  game.rs  games.rs  lib.rs  main.rs  mcts.rs  moves.rs  network.rs  networks.rs  params.rs  policy.rs  position.rs  shatranj.rs  tree.rs  uci.rs  value.rs
src/ataxx/: board.rs  mod.rs  moves.rs  policy.rs  value.rs
src/chess/: attacks.rs  board.rs  consts.rs  frc.rs  mod.rs  moves.rs  policy.rs  qsearch.rs  value.rs
src/games/: ataxx.rs  chess.rs  shatranj.rs
src/games/ataxx/: policy.rs  util.rs
src/games/chess/: attacks.rs  board.rs  frc.rs  moves.rs  policy.rs  value.rs
src/games/shatranj/: attacks.rs  board.rs  moves.rs  policy.rs
src/mcts/: helpers.rs  iteration.rs  params.rs  search_stats.rs  tree.rs
src/networks/: accumulator.rs  activation.rs  common.rs  layer.rs  policy.rs  threats.rs  value.rs
src/networks/policy/: inputs.rs  outputs.rs  see.rs
src/networks/value/: attacks.rs  threats.rs
src/search/: mcts.rs  mod.rs  params.rs  policy.rs  qsearch.rs  value.rs
src/shatranj/: board.rs  consts.rs  value.rs
src/state/: attacks.rs  consts.rs  mod.rs  moves.rs  position.rs
src/train/: datagen.rs  mod.rs  rng.rs
src/tree/: edge.rs  half.rs  hash.rs  lock.rs  node.rs  ptr.rs  stats.rs  table.rs  vec.rs
train/: Cargo.toml
train/policy/: Cargo.toml
train/policy/src/: arch.rs  ataxx.rs  chess.rs  lib.rs  loader.rs  main.rs  shatranj.rs
train/src/: main.rs
train/src/ataxx/: mod.rs  policy.rs  value.rs
train/src/chess/: mod.rs  policy.rs
train/value/: Cargo.toml
train/value/src/: input.rs  loader.rs  main.rs
