[package]
name = "monty"
version = "1.0.0"
edition = "2021"
authors = ["Jamie Whiting"]
rust-version = "1.83"

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[features]
embed = []
datagen = []
uci-minimal = []
tunable = []

[workspace]
members = ["datagen"]
resolver = "2"

[dependencies]
memmap2 = "0.9.5"
zstd = "0.13.2"

[build-dependencies]
sha2 = "0.10.8"
chrono = "0.4.38"
zstd = { version = "0.13.2", features = ["zstdmt"] }