[package]
name = "monty"
version = "1.0.0"
edition = "2021"
authors = ["Jamie Whiting, Viren & The Monty Authors"]
rust-version = "1.83"

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[features]
embed = []
raw = []
datagen = ["rand", "rand_distr"]
uci-minimal = []
tunable = []

[workspace]
members = ["datagen"]
resolver = "2"

[dependencies]
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
memmap2 = "0.9.5"
zstd = "0.13.2"
once_cell = "1.20.2"
sha2 = "0.10.8"

[build-dependencies]
sha2 = "0.10.8"
chrono = "0.4.38"
zstd = { version = "0.13.2", features = ["zstdmt"] }