[package]
name = "monty"
version = "1.0.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[features]
embed = []
raw = []
datagen = ["rand", "rand_distr"]
uci-minimal = []
tunable = []
value = []
policy = []

[dependencies]
montyformat = { workspace = true }
rand = { version = "0.9.2", optional = true }
rand_distr = { version = "0.5.1", optional = true }
memmap2 = "0.9.5"
zstd = "0.13.2"
once_cell = "1.20.2"
sha2 = "0.10.8"

[build-dependencies]
sha2 = "0.10.8"
chrono = "0.4.38"
zstd = { version = "0.13.2", features = ["zstdmt"] }

[workspace]
members = ["crates/datagen", "crates/montyformat", "crates/train-value"]
resolver = "2"

[workspace.package]
authors = ["Jamie Whiting, Viren & The Monty Authors"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/official-monty/Monty"
rust-version = "1.87"
edition = "2021"

[workspace.dependencies]
montyformat = { version = "0.10.0", path = "crates/montyformat" }
monty = { path = "./" }