[package]
name = "montyformat"
version = "0.10.0"
description = "Chess implementation & compressed data formats for Monty"
rust-version = "1.83"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
memmap2 = "0.9.9"
rayon = "1.11.0"