[package]
name = "train-value"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
default-run = "train-value"

[features]
default = ["cuda"]
cpu = ["bullet_lib/cpu"]
cuda = ["bullet_lib/cuda"]
hip = ["bullet_lib/hip"]

[dependencies]
bullet_lib = { package = "bullet_lib", git = 'https://github.com/jw1912/bullet', default-features = false, rev = "0891eca1fa3316db0d009df7146f85eab04407c2" }
montyformat = { workspace = true }
monty = { workspace = true }
