[package]
name = "policy"
version = "0.1.0"
edition = "2021"
authors = ["Jamie Whiting"]

[features]
ataxx = ["datagen/ataxx", "monty/ataxx"]
shatranj = ["datagen/shatranj", "monty/shatranj"]

[dependencies]
datagen = { path = "../../datagen" }
monty = { path = "../../" }
goober = { git = 'https://github.com/jw1912/goober' }
