[package]
name = "value"
version = "0.1.0"
edition = "2021"
authors = ["Jamie Whiting"]

[features]
shatranj = ["datagen/shatranj", "monty/shatranj"]

[dependencies]
bullet = { package = "bullet_lib", git = 'https://github.com/jw1912/bullet', features = ["cuda"] }
datagen = { path = "../../datagen" }
monty = { path = "../../" }
